Refactor architecture: Extract model and move disassembly to core
- Extract report classes and `AnalysisService` to new `jbi-model` module
- Move bytecode disassembly and constant pool resolution from CLI to `JByteInspectorEngine`
- Introduce `InstructionReport` to hold resolved instruction data
- Encapsulate fields in parser `CONSTANT_*_info` classes
- Update CLI and GUI to use the new model and pre-parsed instructions
- Update integration tests to use relative fixture paths